--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -23,6 +23,7 @@ a:focus { border: dotted; padding: 3px; font-size: 1.2rem; }
 @media only screen and (max-device-width: 500px) { * { font-size: $mobile-font-size !important; } }
 #logo { float:left; margin-top: 12px; background-color: #000; color: #FFF; padding: 2px; }
 a[target='_blank']::after {content: ' \25F3';}
+img { border-radius: 10px; display: block; margin-left: auto; margin-right: auto; max-width: 99%; margin-bottom: 15px; }
 
 /**
  * Layout
