--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -45,6 +45,60 @@ h3 { font-size: 1.2rem; }
 h4 { font-size: 1.0rem; }
 
 /**
+* Tables
+*/
+
+table {
+  border-collapse: collapse;           /* No space between borders. */
+  width: 100%;
+}
+table + table {
+  margin-top: 2em;                     /* Add margin for subsequent tables. */
+}
+
+table.full {                           /* Not quite full width so text isn't flush against border. */
+  margin-left: calc(var(--full-margin-left) + .5rem);
+  width: calc(var(--full-width) - 1em);
+}
+
+caption {
+  font-weight: bold;                   /* Make caption stand out more. */
+}
+
+tr {
+  border-bottom: 1px solid #000;       /* Divide rows with a border. */
+}
+table > tr:last-child, tbody tr:last-child, tfoot tr:last-child {
+  border-bottom: none;                 /* No border on the last row. */
+}
+tfoot tr:first-child {
+  border-top: 1px solid #000;          /* Continue border on first tfoot row; removed with tbody tr:last-child. */
+}
+
+td, th {
+  padding: .2em .5em;                  /* Whitespace on top/bottom to make it less dense. */
+                                       /* And to the side to prevent cells from touching. */
+  hyphens: none;                       /* Disable hyphenation by default, as it tends to wreak havoc with cell width calculations. */
+}
+
+td.left, th.left  {                    /* Left aligned table cells (mainly for <th>). */
+  text-align: left;
+}
+td.right, th.right {                   /* Right aligned table cells. */
+  text-align: right;
+}
+table td.right {
+    font-feature-settings: 'tnum' on;  /* Use tabular numbers for alignment. */
+    font-variant-numeric: tabular-nums;
+    font-family: sans-serif;           /* Libre Baskerville has no aligned numbers :-( */
+}
+tbody tr:nth-child(odd) {
+  background-color: #edd4b6;           /* zebra striping on even rows*/
+}
+
+
+
+/**
  * Highlight/Markup
  */
 ::selection { background: var(--selection-background);  color: var(--selection-text); }
