--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -140,15 +140,15 @@ textarea { vertical-align: top; }
  */
 .lineno { color: var(--code-color-1); margin-right: 15px; }
 figure.highlight { margin: 5px 0; }
-pre { background-color: var(--background-color);  border: none;  padding: 0;  margin: 0;  overflow:auto;  font-size: $base-font-size;  color: var(--text-color);  line-height: 1.7 !important;  font-family: $base-font-family !important; }
+pre { background-color: #edd4b6;  border: none;  padding: 0;  margin: 0;  overflow:auto;  font-size: $base-font-size;  color: var(--text-color);  line-height: 1.7 !important;  font-family: $base-font-family !important; }
 .highlight .hll { background-color: var(--code-color-2); }
-.highlight .c { color: var(--code-color-1); font-style: italic } /* Comment */
+.highlight .c { color: #34495e; font-style: italic } /* Comment */
 .highlight .err { color: var(--code-color-3); background-color: var(--code-color-4); } /* Error */
-.highlight .k { color: var(--code-color-5); } /* Keyword */
-.highlight .cm { color: var(--code-color-1); font-style: italic } /* Comment.Multiline */
+.highlight .k { color: #964ea6; } /* Keyword */
+.highlight .cm { color: #34495e; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: var(--code-color-6); } /* Comment.Preproc */
-.highlight .c1 { color: var(--code-color-1); font-style: italic } /* Comment.Single */
-.highlight .cs { color: var(--code-color-5); font-style: italic } /* Comment.Special */
+.highlight .c1 { color: #34495e; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #34495e; font-style: italic } /* Comment.Special */
 .highlight .gd { color: var(--code-color-7); } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: var(--code-color-7); } /* Generic.Error */
@@ -159,25 +159,25 @@ pre { background-color: var(--background-color);  border: none;  padding: 0;  ma
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: var(--code-color-12); font-weight: bold } /* Generic.Subheading */
 .highlight .gt { color: var(--code-color-7); } /* Generic.Traceback */
-.highlight .kc { color: var(--code-color-5); } /* Keyword.Constant */
-.highlight .kd { color: var(--code-color-5); } /* Keyword.Declaration */
-.highlight .kn { color: var(--code-color-5); } /* Keyword.Namespace */
-.highlight .kp { color: var(--code-color-5); } /* Keyword.Pseudo */
-.highlight .kr { color: var(--code-color-5); } /* Keyword.Reserved */
-.highlight .kt { color: var(--code-color-13); } /* Keyword.Type */
+.highlight .kc { color: #964ea6; } /* Keyword.Constant */
+.highlight .kd { color: #964ea6; } /* Keyword.Declaration */
+.highlight .kn { color: #964ea6; } /* Keyword.Namespace */
+.highlight .kp { color: #964ea6; } /* Keyword.Pseudo */
+.highlight .kr { color: #964ea6; } /* Keyword.Reserved */
+.highlight .kt { color: #2978b9; } /* Keyword.Type */
 .highlight .m { color: var(--code-color-14); } /* Literal.Number */
 .highlight .s { color: var(--code-color-15); } /* Literal.String */
 .highlight .na { color: var(--code-color-16); } /* Name.Attribute */
-.highlight .nb { color: var(--code-color-13); } /* Name.Builtin */
+.highlight .nb { color: #2978b9; } /* Name.Builtin */
 .highlight .nc { color: var(--code-color-9); text-decoration: underline } /* Name.Class */
 .highlight .no { color: var(--code-color-7); } /* Name.Constant */
 .highlight .nd { color: var(--code-color-10); } /* Name.Decorator */
 .highlight .ni { color: var(--code-color-17); font-weight: bold } /* Name.Entity */
 .highlight .nf { color: var(--code-color-9); } /* Name.Function */
-.highlight .nn { color: var(--code-color-13); text-decoration: underline } /* Name.Namespace */
+.highlight .nn { color: #2978b9; text-decoration: underline } /* Name.Namespace */
 .highlight .nt { color: var(--code-color-16); font-weight: bold } /* Name.Tag */
 .highlight .nv { color: var(--code-color-7); } /* Name.Variable */
-.highlight .ow { color: var(--code-color-5); } /* Operator.Word */
+.highlight .ow { color: #964ea6; } /* Operator.Word */
 .highlight .w { color: var(--code-color-18); } /* Text.Whitespace */
 .highlight .mf { color: var(--code-color-14); } /* Literal.Number.Float */
 .highlight .mh { color: var(--code-color-14); } /* Literal.Number.Hex */
@@ -193,8 +193,8 @@ pre { background-color: var(--background-color);  border: none;  padding: 0;  ma
 .highlight .sx { color: var(--code-color-15); } /* Literal.String.Other */
 .highlight .sr { color: var(--code-color-14); } /* Literal.String.Regex */
 .highlight .s1 { color: var(--code-color-15); } /* Literal.String.Single */
-.highlight .ss { color: var(--code-color-5); } /* Literal.String.Symbol */
-.highlight .bp { color: var(--code-color-13); } /* Name.Builtin.Pseudo */
+.highlight .ss { color: #964ea6; } /* Literal.String.Symbol */
+.highlight .bp { color: #2978b9; } /* Name.Builtin.Pseudo */
 .highlight .vc { color: var(--code-color-7); } /* Name.Variable.Class */
 .highlight .vg { color: var(--code-color-7); } /* Name.Variable.Global */
 .highlight .vi { color: var(--code-color-7); } /* Name.Variable.Instance */
