--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -109,6 +109,7 @@ tbody tr:nth-child(odd) {
  */
 :not(.menu) > ul { list-style: none;  padding-left: 0; }
 :not(.menu) > ul { list-style-type: none; }
+:not(.menu) > ul > li { padding-bottom: 1px; }
 :not(.menu) > ul > li:before { content: "-";  margin-right: 9px; }
 
 /**
