--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <script defer data-domain="krisbolton.com" src="https://plausible.io/js/plausible.js"></script>
+  
   <title>{{ page.title }}</title>
 
   {% if page.robots %}
