add estimated read time to posts. closes #7

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -97,6 +97,11 @@ tbody tr:nth-child(odd) {
 }
 
 
+/**
+* Posts
+*/
+
+.post-read-time { font-style: italic; margin-bottom: 15px; }
 
 /**
  * Highlight/Markup
