--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 <div>
 	<h1> {{ page.title | escape }} </h1>
+	<div class="post-read-time">{% assign words = page.content | number_of_words %} {% if words < 360 %} 1 min read {% else %} {{ words | divided_by:170 }} min read {% endif %}</div>
 </div>
 
 <div>
